# protobuf-on-arduino

./: .clang-format  .gitignore  Makefile  learnprotobuf.ino  pyproject.toml
python/: counter.py  raincounter_pb2.py  test_find_bug.py
schemas/: raincounter.proto
src/: raincounter.pb.c  raincounter.pb.cc  raincounter.pb.h
